Added Sec+ Cert

--- a/index.html
+++ b/index.html
@@ -499,8 +499,13 @@
 						<p>Expected December 2025, Microsoft Corporation</p>
 					</li>-->
 					<li>
+						<h4><a href="https://www.comptia.org/en-us/certifications/security/"
+								target="_blank">CompTIA Security+</a></h4>
+						<p>January 2026, CompTIA</p>
+					</li>
+					<li>
 						<h4><a href="https://developer.hashicorp.com/certifications/infrastructure-automation"
-								target="_blank">Terraform Associate</a></h4>
+								target="_blank">Terraform Certified: Associate</a></h4>
 						<p>December 2025, HashiCorp</p>
 					</li>
 					<li>
