--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 					Systems &amp; Platforms</h4>
 				<div class="skill-tag-list">
 					<span class="button small">Windows</span>
-					<span class="button small">MacOS</span>
+					<span class="button small">macOS</span>
 					<span class="button small">Ubuntu/Debian</span>
 					<span class="button small">Alpine Linux</span>
 					<span class="button small">FreeBSD</span>
